--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: technofeed
+name: TechnoFeed
 description: A material news reader app.
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -6,7 +6,7 @@ description: A material news reader app.
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
 # Read more about versioning at semver.org.
-version: 1.0.1+1
+version: 1.0.2+1
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
 dependencies:
