--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,16 +6,15 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.google.gms:google-services:4.0.1'
     }
 }
-
 allprojects {
     repositories {
         google()
         jcenter()
     }
 }
-
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
@@ -23,7 +22,6 @@ subprojects {
 subprojects {
     project.evaluationDependsOn(':app')
 }
-
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
