--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ description: A material news reader app.
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
 # Read more about versioning at semver.org.
-version: 1.0.5+1
+version: 1.0.6+1
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
@@ -22,6 +22,7 @@ dependencies:
   url_launcher: ^4.0.1
   timeago: ^2.0.8
   share: ^0.5.3
+  firebase_auth: ^0.5.20
 
 dev_dependencies:
   flutter_test:
